--- a/src/ExpensePage.css
+++ b/src/ExpensePage.css
@@ -1,4 +1,4 @@
-/* ExpensePage.css */
+ExpensePage.css
 .form-container {
     margin-bottom: 1em;
   }
@@ -14,5 +14,38 @@
     text-align: left;
   }
   
-
+  .form-container {
+    margin-bottom: 1em;
+  }
+  
+  .table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  .table th,
+  .table td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: left;
+  }
+  
+  .content {
+    position: relative;
+  }
+  
+  .background-image {
+    background-image: url('/home/yisakt/Development/code/phase-2/Expense-Tracker-Phase-2-Project/src/images/money-finances.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 150vh;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  /* Add any other styles as needed */
+  
   
